--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@remix-run/node": "^2.9.2",
 		"@remix-run/react": "^2.9.2",
 		"@remix-run/serve": "^2.9.2",
+		"@sanity/asset-utils": "^1.3.0",
 		"@sanity/client": "^6.20.0",
 		"@sanity/image-url": "^1.0.2",
 		"@sanity/react-loader": "^1.10.2",
