--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
 		"groq": "^3.45.0",
 		"isbot": "^4.1.0",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"@netlify/functions": "^2.6.0",
+		"@netlify/remix-adapter": "^2.3.1"
 	},
 	"devDependencies": {
 		"@remix-run/dev": "^2.9.2",
